[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n1filter"
version = "0.1.1"
description = "Python SDK for the N1Filter AI Generation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["n1filter", "ai", "generation", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/n1filter/n1filter-python"
Documentation = "https://github.com/n1filter/n1filter-python#readme"
Repository = "https://github.com/n1filter/n1filter-python"
Issues = "https://github.com/n1filter/n1filter-python/issues"

[tool.hatch.build.targets.sdist]
include = ["src/n1filter"]

[tool.hatch.build.targets.wheel]
packages = ["src/n1filter"]
